--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,8 +23,12 @@ li {
 	margin: 0 auto;
 }
 
+.fa {
+	margin-right: 5px;
+}
+
 header {
-	background-color: #778899;
+	background-color: rgba(119, 136, 153, 0.9);
 	color: #fff;
 	height: 100px;
 	width: 100%;
@@ -45,9 +49,9 @@ header {
 
 .header-right {
 	float: right;
-	margin-right: 15px;
+	margin-right: -15px;
 }
-
+	
 .header-right a {
   line-height: 80px;
   padding: 0 25px;
