--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
 	font-family: geneva,arial,helvetica;
 	margin: 0;
@@ -5,10 +9,6 @@ body {
 
 a {
 	text-decoration: none;
-}
-
-li {
-	list-style: none;
 }
 
 .container {
