--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ a {
 }
 
 .fa {
-	margin-right: -5px;
+	margin-right: 5px;
 }
 
 header {
@@ -70,10 +70,10 @@ header {
 }
 
 .menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
+  color: white !important;
+  float: right !important;
+  font-size: 25px !important;
+  padding: 21px 0 !important;
   display: none !important;
 }
 
