--- a/stylesheet.css
+++ b/stylesheet.css
@@ -128,10 +128,10 @@ header {
 }
 
 .menu-icon {
-  color: white !important;
-  float: right !important;
-  font-size: 25px !important;
-  padding: 21px 0 !important;
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
   display: none !important;
 }
 
